# lab-docsum

./: .gitignore  .gitmodules  README.md  chat.py  pyproject.toml
.github/workflows/: doctest.yml  integration-test.yml  pypi.yml
tools/: __init__.py  cat.py  grep.py  ls.py
